--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=Tehran123;Server=localhost;Port=5432;Database=BigDb;IntegratedSecurity=true;Pooling=true;"    
+    "DefaultConnection": ""    
   }
 }
