--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MediaPath": "Media//Attachment",
+  "FileEncryptionKey":"MAKV2SPBNI54324",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""    
+    "DefaultConnection": "User ID=postgres;Password=Tehran123;Server=localhost;Port=5433;Database=BigDb;IntegratedSecurity=true;Pooling=true;"    
   }
 }
